[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'smartcrop'
version = '0.4.2'

# Metadata
authors = [
    {name = 'David Fischer', email = 'david@fisch3r.net'},
    {name = 'Hideo Hattori', email = 'hhatto.jp@gmail.com'}
]
description = 'smartcrop implementation in Python'
keywords = ['image', 'crop', 'PIL', 'Pillow']
readme = {file = 'README.md', content-type = "text/markdown"}
classifiers = [
    # https://pypi.python.org/pypi?%3Aaction=list_classifiers
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Utilities'
]

# Requirements
requires-python = '>=3.9'
dependencies = [
    'numpy',
    'pillow>=6.0.0',
]

[project.optional-dependencies]
test = [
    'colored>=2.2.4',         # 2024-03-19 Released 2023-12-19
    'coverage>=7.4.4',        # 2024-03-19 Released 2024-03-14
    'flake8>=7.0.0',          # 2024-03-19 Released 2024-01-05
    'mypy>=1.9.0',            # 2024-03-19 Released 2024-03-08
    'pylint>=3.1.0',          # 2024-03-19 Released 2024-02-25
    'pytest>=8.1.1',          # 2024-03-19 Released 2024-03-09
    'pytest-cov>=4.1.0',      # 2024-03-19 Released 2023-05-24
    'pytest-pylint>=0.21.0',  # 2024-03-19 Released 2023-10-06
    'pytest-ruff>=0.3.1',     # 2024-03-19 Released 2024-03-09
    'ruff>=0.3.3',            # 2024-03-19 Released 2024-03-15

    # For MyPy
    # Based on mypy --install-types
    'types-Pillow',
    'types-Pygments',
    'types-colorama',
    'types-setuptools'

     # 07-06-2023 Bug still not resolved
     # Bug https://github.com/tholo/pytest-flake8/issues/87
     # Fix https://github.com/tholo/pytest-flake8/pull/88/files
     # 'pytest-flake8'
]

[project.scripts]
smartcroppy = 'smartcrop.cli:main'

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

# [tool.setuptools-git-versioning]
# enabled = true

[project.urls]
homepage = 'https://github.com/smartcrop/smartcrop.py'
documentation = 'https://github.com/smartcrop/smartcrop.py'
repository = 'https://github.com/smartcrop/smartcrop.py'
